--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "@material-ui/core": "^4.9.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2"
   },
   "scripts": {
     "start": "nodemon server.js"
